# spritecooker

./: .gitignore  Cargo.toml  README.md  spritecooker.code-workspace
src/: binfile.rs  bitmap.rs  bmpto2bpp.rs  bmptovga.rs  gb_cooker.rs  image.rs  impostor_cooker.rs  lib.rs  main.rs  previewimage.rs  sprite.rs  spritesheet.rs  vgapalette.rs
src/decoders/: mod.rs  pico8_decoder.rs
src/encoders/: gameboy_encoder.rs  mod.rs
src/formats/: gameboy.rs  mod.rs  pico8.rs
src/sprites/: gameboy_sprite.rs  impostor_sprite.rs  mod.rs  pico8_sprite.rs
