[package]
name = "impostor-spritecooker"
version = "0.1.0"
authors = ["Giorgio Pomettini <giorgio.pomettini@gmail.com>"]
autobins = false

[dependencies]
image = "0.20.1"
exoquant = "0.2.0"
stb_image = "0.2.2"
glob = "0.2.11"

[[bin]]
name = "impostor_cooker"
path = "src/impostor_cooker.rs"
[[bin]]
name = "gb_cooker"
path = "src/gb_cooker.rs"